<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivTopRight"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/top_right_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/LinearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivTopRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="15dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/ivFindSurface"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/contentDes"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/btnFindSurface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_surface"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/LinearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:elevation="4dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/ivFindImage"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/contentDes"
                app:layout_constraintDimensionRatio="16:9"/>

            <TextView
                android:id="@+id/btnFindImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_image"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Bottom Container with Background -->
    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/btnChooseDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_display"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:padding="15dp"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>