<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ModelActivity">

    <!-- PreviewView để hiển thị luồng video từ camera -->
    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer" />

    <FrameLayout
        android:id="@+id/modelShowView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"
        android:background="@android:color/transparent">

        <!-- WebView -->
        <WebView
            android:id="@+id/modelWebView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"/>
    </FrameLayout>

    <!-- Horizontal container -->
    <LinearLayout
        android:id="@+id/center_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <!-- Joystick trái -->
    <FrameLayout
        android:id="@+id/Big_joystickLeft"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="0dp">
        <FrameLayout
            android:id="@+id/joystickLeft"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/joystick_background">
        <ImageView
            android:id="@+id/joystickLeftKnob"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:contentDescription="@string/joystick_knob" />
        </FrameLayout>
    </FrameLayout>

    <!-- Joystick phải -->
    <FrameLayout
        android:id="@+id/Big_joystickRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginHorizontal="0dp">
        <FrameLayout
            android:id="@+id/joystickRight"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/right_joystick_background"
            android:clipChildren="false"
            android:clipToPadding="false">
        <ImageView
            android:id="@+id/joystickRightKnob"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:contentDescription="@string/joystick_knob" />
        </FrameLayout>
    </FrameLayout>
    <!-- Joystick phải -->
    <FrameLayout
        android:id="@+id/Camera_Button_Area"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginHorizontal="0dp">

        <!-- Nút bật/tắt camera -->
        <TextView
            android:id="@+id/button_toggle_camera"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_camera"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_white_button"
            android:padding="12dp"/>
    </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvModelInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_message"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="@drawable/toast_background"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <!-- 4 ImageView in the left top column -->
    <ImageView
        android:id="@+id/ivTop1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/contentDes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/ivTop2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/contentDes"
        app:layout_constraintTop_toBottomOf="@id/ivTop1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <!-- Bottom Container with Background -->
    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBottomLeft"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/contentDes"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/btnChooseDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginEnd="35dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>