<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".SignActivity">

    <!-- Logo trường -->
    <ImageView
        android:id="@+id/imgUniversityLogo"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:src="@drawable/university_logo"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgBiotechLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgUniversityLogo"
        app:layout_constraintBottom_toTopOf="@id/containerLogin"
        tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />

    <!-- Container xanh đậm -->
    <LinearLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container_bg"
        android:padding="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/new_gray"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imgBiotechLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Mã số cá nhân Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/pid"
        android:inputType="textVisiblePassword"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/new_gray"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:padding="12dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
